# LFA_Tema_3

./: .gitignore  CMakeLists.txt  CYK.cpp  Grammar_FNC.cpp  Grammar_FNC.h  cyk.txt  recgen.cpp
CYK/: Array3D.h  Array3D.tpp  CMakeLists.txt  CYK.cpp  Grammar_FNC.cpp  color.hpp  cyk_tests.txt
pushdown/: CMakeLists.txt  PushdownFSM.cpp  PushdownFSM.h  pda.txt  pushdown.cpp
